fix: improve `EnhancedTable` + hide send on mobile (#893)
* fix: improve `EnhancedTable` + hide send on mobile

* fix: dependency

* fix: remove `min-width`

* style: hide via CSS

--- a/src/components/balances/AssetsTable/styles.module.css
+++ b/src/components/balances/AssetsTable/styles.module.css
@@ -14,7 +14,8 @@
 }
 
 @media (max-width: 600px) {
-  .container td:last-of-type button {
-    opacity: 1;
+  .container td:last-of-type,
+  .container th:last-of-type {
+    display: none;
   }
 }
